A.F....... [ZBX-1357] updated Chinese (China), English (United States), Japanese, Korean, Turkish translations; thanks to Zabbix translators (zalex_ua)
..F....... [ZBXNEXT-4054] implemented feature to open first available dashboard from the list (Ivo)
..F....... [ZBXNEXT-4046] implemented dashboard widget minimum height limit (gcalenko)

Bug fixes:
.........T [ZBX-12688] fixed false positives on 'High bandwidth usage' trigger in Template_Module_Interfaces_* templates (vso, vzhuravlev)
.......PS. [ZBX-11675] fixed crash that could occur during connection failures to MySQL (Sergejs, vso)
..F....... [ZBX-12617] fixed sorting by host name for items on availability report page (gcalenko)
A......... [ZBX-12699] added support of strings in "sortfield" and "sortorder" parameters, and added sorting by "name" for dashboard.get() (Sasha)
..F....... [ZBX-12577] added item select filter for simple graph to allow select only supported item (gcalenko)
..F....... [ZBX-12647] fixed map minimum severity option in screens (miks)
........S. [ZBX-12696] fixed trigger not being calculated for newly received item values if last one of those is unsupported value (vso)
..F....... [ZBX-12548] fixed notification sound not being played for message with timeout set to greater than minute (gcalenko)
...G...... [ZBX-12653] fixed heap corruption in Windows agent; thanks to Ronnie Kaech for the patch (abs)
A......... [ZBX-12660] fixed result of hostinterface.replacehostinterfaces method (Sasha)
..F....... [ZBX-12469] added new context for 'Second' string to be properly translated in maintenance period form (gcalenko)
..F....... [ZBX-12616] fixed trapper item "Allowed hosts" field user macro support (gcalenko)
.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
...G...PS. [ZBX-10820] fixed potential loss of data when server/proxy processes zabbix_sender data (Andris)