@@ -2,10 +2,10 @@
 	jQuery(function() {
 		initPMaster(
 			'slideshows',
-			<?php
-				echo CJs::encodeJson([
+			<?=
+				CJs::encodeJson([
 					WIDGET_SLIDESHOW => [
-						'frequency' => $this->data['element']['delay'] * $this->data['refreshMultiplier'],
+						'frequency' => timeUnitToSeconds($data['element']['delay']) * $data['refreshMultiplier'],
 						'url' => 'slides.php?output=html&elementid='.$this->data['elementId'].
 							(isset($this->data['groupid']) ? '&groupid='.$this->data['groupid'] : '').
 							(isset($this->data['hostid']) ? '&hostid='.$this->data['hostid'] : ''),
